# VitalVision

./: CMakeLists.txt  README.md  shader.bat  xmake.lua
Runtime/: BaseDefine.h  Main.cpp
Runtime/Core/: VkContext.cpp  VkContext.h  Window.cpp
Runtime/Foundation/: Log.cpp  Log.h
src/: main.cpp
src/core/: Application.cpp  Application.h  VkContext.cpp  VkContext.h  Window.cpp  Window.h
